# ftags

./: .ftags  .ftags.bak  Cargo.toml  README.md
doc/: file-spec.md
src/: lib.rs  main.rs
test/: ftags-test
