[package]
name = "ftags"
version = "0.1.0"
edition = "2021"
authors = ["Scraft161"]
description = "a file tagging utility"
homepage = "https://github.com/Scraft161/ftags"
repository = "https://github.com/Scraft161/ftags"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"

[profile.release]
opt-level = "s"
strip = true
debug-assertions = false
lto = true
incremental = false

[profile.dev]
incremental = true

[[bin]]
name = "ftags"
